--- a/ProjectEulerLibraryTests/ProjectEulerLibraryTests.csproj
+++ b/ProjectEulerLibraryTests/ProjectEulerLibraryTests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="ProblemTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MathTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
