--- a/ProjectEulerLibraryTests/ProjectEulerLibraryTests.csproj
+++ b/ProjectEulerLibraryTests/ProjectEulerLibraryTests.csproj
@@ -56,9 +56,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="FibonacciTests.cs" />
     <Compile Include="ProblemTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MathTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
